<resources>
    <string name="app_name">one_life</string>
    <string name="login">Login</string>
    <string name="email">Username</string>
    <string name="password">Enter Password</string>
    <string name="new_to_tutlane_register_here">New to SAHAYAK? Register here</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="full_name">Username</string>
    <string name="registration">Registration</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="id">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>